...
                    year?.let { listOf(Run(it)) },
                    pages?.let { listOf(Run(it)) },
                    doi?.let { listOf(Run(it)) }
                )

                WorkKind.Thesis -> listOfNotNull(
                    listOf(Run("Thesis")),
                    venue?.let {
                        listOf(Run(it))
                    },
                    year?.let { listOf(Run(it)) },
                    doi?.let { listOf(Run(it)) }
                )
...
