...
import com.etatech.hashiya.core.model.Paper

object SamplePapers {
    val attention = Paper(
        openAlexId = "W2626778328",
        doi = "10.48550/arxiv.1706.03762",
        title = "Attention Is All You Need",
        authors = listOf(
            Author("Ashish Vaswani", "A5103024730"),
            Author("Noam Shazeer", "A5021878400"),
            Author("Niki Parmar", null),
            Author("Jakob Uszkoreit", null),
            Author("Llion Jones", null)
...
